--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,10 @@
 setuptools
 # Force newer opencv with wheels for Py3.13 to avoid build failure
 opencv-python>=4.10.0
-craft-text-detector==0.4.3
+# craft-text-detector was unused (we use local CRAFT-pytorch), and caused conflict.
+# We add its actual dependencies directly:
+scikit-image>=0.19.0
+scipy>=1.8.0
 numpy>=1.21.0
 Pillow>=8.0.0
 torch>=1.7.0
